# algolia-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: app_id.rs  client.rs  error.rs  filter.rs  host.rs  key.rs  lib.rs  model.rs  request.rs  response.rs  task.rs
src/model/: attribute.rs
src/model/snapshots/: algolia__model__attribute__test__empty.snap  algolia__model__attribute__test__facet_attributes.snap  algolia__model__attribute__test__list_of_attributes.snap
