[package]
name = "algolia"
version = "0.1.0"
authors = ["Chloe Ross <orangesnowfox@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.7.3"
serde_json = "1.0.57"

[dependencies.chrono]
version = "0.4.15"
features = ["serde"]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.7"
features = ["json"]

[dependencies.tokio]
version = "0.2.22"
features = ["macros"]
