[package]
name = "algolia"
version = "0.1.0"
authors = ["Chloe Ross <orangesnowfox@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.13.0"
hex = "0.4.2"
hmac = "0.10.1"
rand = "0.8.1"
serde_json = "1.0.57"
serde_urlencoded = "0.7.0"
sha2 = "0.9.2"
thiserror = "1.0.20"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.7"
features = ["json"]

[dependencies.tokio]
version = "0.2.22"
features = ["macros"]

[dev-dependencies]
insta = "1.5"
