[package]
name = "algolia"
version = "0.1.0"
authors = ["Chloe Ross <orangesnowfox@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.13.0"
hex = "0.4.3"
hmac = "0.11.0"
rand = "0.8.4"
serde_json = "1.0.66"
serde_urlencoded = "0.7.0"
sha2 = "0.9.5"
thiserror = "^1.0"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.4"
features = ["json"]

[dependencies.tokio]
version = "1.10.0"
features = ["macros"]

[dev-dependencies]
insta = "1.7.2"
